unpackaged/main/default/objects/CA_Meeting_Planning__c/CA_Meeting_Planning__c.object-meta.xml
<CustomObject>
    <label>CA Meeting Planning</label>
    <nameField>
        <displayFormat>CAMP - {00000}</displayFormat>
        <label>CA Meeting Planning Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CA Meeting Plannings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>