unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <referenceTo>CA_Main_Event__c</referenceTo>
    <relationshipLabel>CA Meeting Plannings</relationshipLabel>
    <relationshipName>CA_Meeting_Plannings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>