unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/External_UID__c.field-meta.xml
<CustomField>
    <fullName>External_UID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Only for admins and dataload, do not remove from the page layout</inlineHelpText>
    <label>External UID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>