unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_AccExe_Onsite_Mobile__c.field-meta.xml
<CustomField>
    <fullName>GES_AccExe_Onsite_Mobile__c</fullName>
    <label>GES AccExe Onsite Mobile</label>
    <type>Phone</type>
</CustomField>