unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_Account_Executive__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Executive__c</fullName>
    <label>GES Account Executive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Boncek, Debbie</fullName>
            </value>
            <value>
                <fullName>Bullock, Deana</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 1</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 2</fullName>
            </value>
            <value>
                <fullName>GES Account Executive 3</fullName>
            </value>
            <value>
                <fullName>Jennifer Spencer</fullName>
            </value>
            <value>
                <fullName>Jones, Kevin</fullName>
            </value>
            <value>
                <fullName>Joy, Jess</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Signoriello, Caroline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>