unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager__c</fullName>
    <label>GES Account Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aldridge, Hannah</fullName>
            </value>
            <value>
                <fullName>Allyson Wagner</fullName>
            </value>
            <value>
                <fullName>Beyer, Lisa</fullName>
            </value>
            <value>
                <fullName>Broome, Julia</fullName>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Brown, Caroline</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Callaway, Carsen</fullName>
            </value>
            <value>
                <fullName>Carey-Smalls, Fanchon</fullName>
            </value>
            <value>
                <fullName>Costa, Debra</fullName>
            </value>
            <value>
                <fullName>Dabra Watters</fullName>
            </value>
            <value>
                <fullName>Dewey, Kaila</fullName>
            </value>
            <value>
                <fullName>Ellis, Richard</fullName>
            </value>
            <value>
                <fullName>Eppelman, Jill</fullName>
            </value>
            <value>
                <fullName>Fletcher, Samantha</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 3</fullName>
            </value>
            <value>
                <fullName>Gorman, Celeste</fullName>
            </value>
            <value>
                <fullName>Harley, Lauren</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Kearney, Jaclynn</fullName>
            </value>
            <value>
                <fullName>Kevin Jones</fullName>
            </value>
            <value>
                <fullName>Lauren Gallagher</fullName>
            </value>
            <value>
                <fullName>Lyles, Terica</fullName>
            </value>
            <value>
                <fullName>Marsh, Reta</fullName>
            </value>
            <value>
                <fullName>Mary Jones</fullName>
            </value>
            <value>
                <fullName>Mason, Lindsey</fullName>
            </value>
            <value>
                <fullName>Mathews, Alita</fullName>
            </value>
            <value>
                <fullName>Medus, Heather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>