unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_Account_Manager_Onsite__c.field-meta.xml
<CustomField>
    <fullName>GES_Account_Manager_Onsite__c</fullName>
    <label>GES Account Manager Onsite</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Beyer, Lisa</fullName>
            </value>
            <value>
                <fullName>Brosmore, Jamie</fullName>
            </value>
            <value>
                <fullName>Eppelman, Jill</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 1</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 2</fullName>
            </value>
            <value>
                <fullName>GES Account Manager 3</fullName>
            </value>
            <value>
                <fullName>Jill Johnson</fullName>
            </value>
            <value>
                <fullName>Kevin Jones</fullName>
            </value>
            <value>
                <fullName>Mary Jones</fullName>
            </value>
            <value>
                <fullName>Mathews, Alita</fullName>
            </value>
            <value>
                <fullName>Melinda Peterson</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Poole, Lauren</fullName>
            </value>
            <value>
                <fullName>Rogers, Kayla</fullName>
            </value>
            <value>
                <fullName>Shamey-Golonka, Kimrlee</fullName>
            </value>
            <value>
                <fullName>Shulman, Amanda</fullName>
            </value>
            <value>
                <fullName>Lyles, Terica</fullName>
            </value>
            <value>
                <fullName>Morris, Dana</fullName>
            </value>
            <value>
                <fullName>Buzzatto, Stephanie</fullName>
            </value>
            <value>
                <fullName>Proule, Jeannette</fullName>
            </value>
            <value>
                <fullName>Marsh, Reta</fullName>
            </value>
            <value>
                <fullName>Ellis, Richard</fullName>
            </value>
            <value>
                <fullName>Brown, Caroline</fullName>
            </value>
            <value>
                <fullName>Harley, Lauren</fullName>
            </value>
            <value>
                <fullName>Morton, Lora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>