unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_AE_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>GES_AE_Email_Formula__c</fullName>
    <formula>IF((TEXT(GES_Account_Executive__c) == &quot;Boy, John&quot;),&quot;jboy@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Spencer, Jennifer&quot;),&quot;Jspencer@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Boncek, Debbie&quot;),&quot;DBoncek@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Chester, Lori&quot;),&quot;lchester@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Maurer, Steve&quot;),&quot;smaurer@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Rosenow, Heather&quot;),&quot;HRosenow@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Bullock, Deana&quot;),&quot;dbullock@ges.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Joy, Jess&quot;),&quot;jjoy@thisisspiro.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Signoriello, Caroline&quot;),&quot;csignoriello@thisisspiro.com&quot;,
IF((TEXT(GES_Account_Executive__c) == &quot;Jones, Kevin&quot;),&quot;kjones@thisisspiro.com&quot;,
&quot;&quot;))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GES AE Email</label>
    <type>Text</type>
</CustomField>