unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_AMO_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_AMO_Email__c</fullName>
    <label>GES AMO Email</label>
    <type>Email</type>
</CustomField>