unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_AMO_Phone__c.field-meta.xml
<CustomField>
    <fullName>GES_AMO_Phone__c</fullName>
    <label>GES AMO Phone</label>
    <type>Phone</type>
</CustomField>