unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_EM_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>GES_EM_Phone_Auto__c</fullName>
    <formula>IF((TEXT(Event_Manager__c) == &quot;Andrew Rolls&quot;),&quot;&quot;,
IF((TEXT(Event_Manager__c) == &quot;Joe Walsh&quot;),&quot;(609) 786-4680&quot;,
IF((TEXT(Event_Manager__c) == &quot;John Hasemann&quot;),&quot;(609) 786-8321&quot;,
IF((TEXT(Event_Manager__c) == &quot;Rebecca Baker&quot;),&quot;(609) 786-4088&quot;,
IF((TEXT(Event_Manager__c) == &quot;Jacqueline Campo&quot;),&quot;(609) 786-3991&quot;,
IF((TEXT(Event_Manager__c) == &quot;Corrine Landolt&quot;),&quot;41 79 909 69 23&quot;,
IF((TEXT(Event_Manager__c) == &quot;Laurie Stein-Richards&quot;),&quot;(201) 273-3645&quot;,
IF((TEXT(Event_Manager__c) == &quot;Kaitlyn Reynolds&quot;),&quot;(609) 495-6590&quot;,
IF((TEXT(Event_Manager__c) == &quot;Curtin, Nadine&quot;),&quot;908-740-6455&quot;,
IF((TEXT(Event_Manager__c) == &quot;Lopez, Ralph&quot;),&quot;908-740-6536&quot;,
IF((TEXT(Event_Manager__c) == &quot;Rosete, Aleida&quot;),&quot;908-740-6544&quot;,
IF((TEXT(Event_Manager__c) == &quot;Kepes, Erica&quot;),&quot;908-740-6194&quot;,
IF((TEXT(Event_Manager__c) == &quot;Throckmorton, Andrea&quot;),&quot;908-740-6341&quot;,
IF((TEXT(Event_Manager__c) == &quot;Schuler, Dan&quot;),&quot;267-305-2564&quot;,
IF((TEXT(Event_Manager__c) == &quot;Syntcha, Dawn&quot;),&quot;908-740-6184&quot;,
IF((TEXT(Event_Manager__c) == &quot;Zarrillo, Rose Marie&quot;),&quot;908-740-6555&quot;,
IF((TEXT(Event_Manager__c) == &quot;Horvath, Judy&quot;),&quot;(267) 446-7002&quot;,
IF((TEXT(Event_Manager__c) == &quot;Rocha, Paula&quot;),&quot;(908) 740-1799&quot;,
IF((TEXT(Event_Manager__c) == &quot;Shamey-Golonka, Kimrlee&quot;),&quot;(732) 594-0432&quot;,
&quot; &quot;)))))))))))))))))))</formula>
    <label>GES EM Phone Auto</label>
    <type>Text</type>
</CustomField>