unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_EMO_Phone__c.field-meta.xml
<CustomField>
    <fullName>GES_EMO_Phone__c</fullName>
    <label>GES EMO Phone</label>
    <type>Phone</type>
</CustomField>