unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_MCO_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_MCO_Email__c</fullName>
    <label>GES MCO Email</label>
    <type>Email</type>
</CustomField>