unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_Meeting_Planner_Email_Formula__c.field-meta.xml
<CustomField>
    <fullName>GES_Meeting_Planner_Email_Formula__c</fullName>
    <formula>IF((TEXT(GES_Meeting_Planner__c) == &quot;Chambers, Brenda&quot;),&quot;bchambers@ges.com&quot;, 
IF((TEXT(GES_Meeting_Planner__c) == &quot;Wagner, Allyson&quot;),&quot;awagner@ges.com&quot;, 
IF((TEXT(GES_Meeting_Planner__c) == &quot;Travis, Brian&quot;),&quot;btravis@ges.com&quot;, 
IF((TEXT(GES_Meeting_Planner__c) == &quot;Caci, Marie&quot;),&quot;mcaci@ges.com&quot;, 
IF((TEXT(GES_Meeting_Planner__c) == &quot;Kramer, Maria&quot;),&quot;mkramer@ges.com&quot;, 
IF((TEXT(GES_Meeting_Planner__c) == &quot;Rogers, Kayla&quot;),&quot;krogers@ges.com&quot;,&quot; &quot;))))))</formula>
    <label>GES Meeting Planner Email Formula</label>
    <type>Text</type>
</CustomField>