unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_Meeting_Planner_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>GES_Meeting_Planner_Phone_Formula__c</fullName>
    <formula>IF((TEXT(GES_Meeting_Planner__c ) == &quot;Chambers, Brenda&quot;),&quot;(412) 408-0506&quot;, 
IF((TEXT(GES_Meeting_Planner__c ) == &quot;Wagner, Allyson&quot;),&quot;(412) 523-2991&quot;, 
IF((TEXT(GES_Meeting_Planner__c ) == &quot;Travis, Brian&quot;),&quot;&quot;, 
IF((TEXT(GES_Meeting_Planner__c ) == &quot;Caci, Marie&quot;),&quot;&quot;, 
IF((TEXT(GES_Meeting_Planner__c ) == &quot;Kramer, Maria&quot;),&quot;(412) 389-2222&quot;, 
IF((TEXT(GES_Meeting_Planner__c ) == &quot;Rogers, Kayla&quot;),&quot;(508) 408-2146&quot;,&quot; &quot;))))))</formula>
    <label>GES Meeting Planner Phone Formula</label>
    <type>Text</type>
</CustomField>