unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/GES_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>GES_PM_Email__c</fullName>
    <label>GES PM Email</label>
    <type>Email</type>
</CustomField>