unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/On_Site_Meeting_Contact_Mobile_Formula__c.field-meta.xml
<CustomField>
    <fullName>On_Site_Meeting_Contact_Mobile_Formula__c</fullName>
    <formula>IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Chambers, Brenda&quot;),&quot;(412) 408-0506&quot;, 
IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Wagner, Allyson&quot;),&quot;(412) 523-2991&quot;, 
IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Travis, Brian&quot;),&quot;&quot;, 
IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Caci, Marie&quot;),&quot;&quot;, 
IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Kramer, Maria&quot;),&quot;(412) 389-2222&quot;, 
IF((TEXT(On_Site_Meeting_Contact__c) == &quot;Rogers, Kayla&quot;),&quot;(508) 408-2146&quot;,&quot; &quot;))))))</formula>
    <label>On-Site Meeting Contact Mobile Formula</label>
    <type>Text</type>
</CustomField>