unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/Onsite_Meeting_Planner_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Meeting_Planner_Mobile__c</fullName>
    <label>Onsite Meeting Planner Mobile</label>
    <type>Phone</type>
</CustomField>