unpackaged/main/default/objects/CA_Meeting_Planning__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Budget Cut</fullName>
            </value>
            <value>
                <fullName>Event Not Occurring</fullName>
            </value>
            <value>
                <fullName>Exhibit Space Sold Out</fullName>
            </value>
            <value>
                <fullName>Product Owner Decision</fullName>
            </value>
            <value>
                <fullName>Public Health Issue</fullName>
            </value>
            <value>
                <fullName>Rollover Event</fullName>
            </value>
            <value>
                <fullName>Strategy Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>