unpackaged/main/default/objects/CA_Meeting_Planning__c/recordTypes/CA_Meeting_Planning_BMS.recordType-meta.xml
<RecordType>
    <fullName>CA_Meeting_Planning_BMS</fullName>
    <active>true</active>
    <label>CA Meeting Planning BMS</label>
</RecordType>