unpackaged/main/default/objects/CA_Meeting_Planning__c/recordTypes/CA_Meeting_Planning_Crown_Castle.recordType-meta.xml
<RecordType>
    <fullName>CA_Meeting_Planning_Crown_Castle</fullName>
    <active>true</active>
    <label>CA Meeting Planning Crown Castle</label>
</RecordType>