unpackaged/main/default/objects/CA_Meeting_Planning__c/recordTypes/CA_Meeting_Planning_Merck.recordType-meta.xml
<RecordType>
    <fullName>CA_Meeting_Planning_Merck</fullName>
    <active>true</active>
    <label>CA Meeting Planning Merck</label>
</RecordType>