unpackaged/main/default/objects/CA_Meeting_Planning__c/validationRules/CA_PreventCancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>CA_PreventCancellation</fullName>
    <active>true</active>
    <description>Event__r.Event_Cancelled__c ==true &amp;&amp; Cancelled__c ==false</description>
    <errorConditionFormula>AND( Cancelled__c = false,
Event__r.Event_Cancelled__c =true)</errorConditionFormula>
    <errorDisplayField>Cancelled__c</errorDisplayField>
    <errorMessage>You can not Un-Cancel Meeting Planning details considering Main Event already cancelled.</errorMessage>
</ValidationRule>